[package]
name = "inquiry"
version = "0.1.0"
license = "MIT"
description = "A utility macro for the inquire crate"
homepage = "https://github.com/thebearodactyl/choice"
repository = "https://github.com/thebearodactyl/choice"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
inquire = "0.7.5"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.103", features = ["full", "extra-traits"] }
