[package]
name = "inquiry"
version = "0.1.1"
license = "MIT"
description = "A utility macro for the inquire crate"
homepage = "https://github.com/thebearodactyl/inquiry"
repository = "https://github.com/thebearodactyl/inquiry"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
inquire = "0.7.5"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
